create ServerAddress and ProxyAddress to have type safety instead of using String everywhere.